--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "office-bot",
+  "name": "my-office",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/server.ts"
   },
@@ -10,25 +10,15 @@
     "type": "git",
     "url": "git+https://github.com/xxalilov/my-office.git"
   },
-  "author": "Xolbek Xalilov",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/xxalilov/my-office/issues"
   },
   "homepage": "https://github.com/xxalilov/my-office#readme",
-  "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/sequelize": "^4.28.14",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0",
-    "sequelize": "^6.25.3",
+  "devDependencies": {
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   }
 }
